<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayListRating">

    <TextView
        android:id="@+id/tv_ytt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/y_tt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_rt"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:text="@string/tv_rt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/r_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/r_name"
        app:layout_constraintStart_toEndOf="@+id/tv_rt"
        app:layout_constraintTop_toBottomOf="@+id/tv_ytt" />

    <TextView
        android:id="@+id/tv_rd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/ne"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rt" />

    <TextView
        android:id="@+id/tv_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_genere"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_d" />

    <TextView
        android:id="@+id/r_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/r_g"
        app:layout_constraintStart_toEndOf="@+id/tv_rg"
        tools:layout_editor_absoluteY="225dp" />

    <TextView
        android:id="@+id/tv_rr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_rating"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rg" />

    <TextView
        android:id="@+id/r_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/r_r"
        app:layout_constraintStart_toEndOf="@+id/tv_rr"
        app:layout_constraintTop_toBottomOf="@+id/tv_rg" />

    <TextView
        android:id="@+id/tv_rm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/r_m"
        app:layout_constraintStart_toEndOf="@+id/r_r"
        app:layout_constraintTop_toBottomOf="@+id/tv_rg" />

    <TextView
        android:id="@+id/tv_ry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_year"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rr" />

    <TextView
        android:id="@+id/r_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/r_y"
        app:layout_constraintStart_toEndOf="@+id/tv_ry"
        app:layout_constraintTop_toBottomOf="@+id/tv_rr" />

    <TextView
        android:id="@+id/r_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/r_g"
        app:layout_constraintStart_toEndOf="@+id/tv_rg"
        app:layout_constraintTop_toBottomOf="@+id/tv_rd" />

    <TextView
        android:id="@+id/tv_rim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_imdb"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ry" />

    <TextView
        android:id="@+id/r_im"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/r_im"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rim" />

    <ImageButton
        android:id="@+id/Button_first"
        android:layout_width="59dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/first" />

    <ImageButton
        android:id="@+id/Button_previous"
        android:layout_width="59dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Button_first"
        app:srcCompat="@drawable/previous" />

    <Button
        android:id="@+id/Button_finish"
        android:layout_width="93dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Button_next"
        app:layout_constraintStart_toEndOf="@+id/Button_previous" />

    <ImageButton
        android:id="@+id/Button_next"
        android:layout_width="59dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Button_last"
        app:srcCompat="@drawable/next" />

    <ImageButton
        android:id="@+id/Button_last"
        android:layout_width="59dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/last" />

    <TextView
        android:id="@+id/r_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/r_d"
        app:layout_constraintStart_toEndOf="@+id/tv_rd"
        app:layout_constraintTop_toBottomOf="@+id/tv_rt" />

</android.support.constraint.ConstraintLayout>